<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/cheat"
        android:layout_weight="1"
        android:textSize="24sp"
        android:gravity="center"/>


    <Button
        android:id="@+id/show_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:padding="20dp"
        android:text="@string/show_answer"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/the_answer_is"
        android:textSize="24sp"
        android:layout_weight="1"
        android:gravity="center"/>
    <TextView
        android:id="@+id/answer_view"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:autoSizeTextType="uniform"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        tools:text="ANSWER"/>






</LinearLayout>

