<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/score_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/score"
            android:textSize="24sp"

            />

        <TextView
            android:id="@+id/score_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:textSize="24sp"
            tools:text="#" />
    </LinearLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:autoSizeTextType="uniform"
        tools:text="Question Text Will Display Here"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"

        >


        <Button
            android:id="@+id/trueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:layout_marginRight="20dp"
            android:text="@string/t"
            android:textSize="24sp"
            android:backgroundTint="@color/blue"

            />

        <Button
            android:padding="20dp"
            android:id="@+id/falseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/f"
            android:textSize="24sp"
            android:backgroundTint="@color/red"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="10dp"
        >
        <Button
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:text="@string/previous"
            android:textSize="24sp"
            android:backgroundTint="@color/teal_700">
        </Button>
        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:text="@string/next"
            android:textSize="24sp"
            android:backgroundTint="@color/teal_700">
        </Button>
    </LinearLayout>
    <Button
        android:id="@+id/cheatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/cheat_button_text"
        android:textSize="24sp"
        android:padding="20dp"
        android:backgroundTint="@color/brown"
    />

</LinearLayout>
